--- a/tueomeu.css
+++ b/tueomeu.css
@@ -29,6 +29,7 @@ body {
 .palacio{
     border-radius: 50%;
     padding-bottom: 5px;
+    padding-top: 15px
 }
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
