--- a/tueomeu.css
+++ b/tueomeu.css
@@ -6,9 +6,17 @@ body{
     text-align:center;
     padding:0;
     margin:0;
-    flex-direction:column;
-
 }
+
+@media only screen and (max-width: 1280px) {
+    body {
+      flex-direction: column;
+    }
+    .logo{
+        margin-bottom: 30px;
+    }
+  }
+
 html, 
 body {
     height: 100%;
@@ -17,7 +25,7 @@ body {
     background-color:black;
   border-radius: 10px;
   cursor:pointer;
-
+  margin-right: 50px;
 }
 .logo:hover{
     background-color:rgb(129, 20, 129);
