--- a/tueomeu.css
+++ b/tueomeu.css
@@ -69,4 +69,7 @@ body {
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
-  
+
+  #audiobrb{
+    visibility: hidden;
+  }
